<resources>
    <string name="app_name">Timecraft</string>
    <string name="user">Nombre de usuario</string>
    <string name="correo">Correo</string>
    <string name="password">Contraseña</string>
    <string name="btnIniciarsesion">Iniciar sesión</string>
    <string name="Registrar">Registrar</string>
    <string name="btningresar">Ingresar</string>
    <string name="RecuperarContraseña">Recuperar Contraseña</string>
    <string name="btnGuardar">Guardar</string>
    <string name="title_activity_onboarding">OnboardingActivity</string>
    <string name="titulo_bienvenida">Bienvenido a Timecraft</string>
    <string name="bienvenida_desc">¡El día tiene 24 horas, tú decides en que invertirlas!</string>
    <string name="start">Empezar</string>
    <string name="logo_desc">Logo Abra</string>
    <string name="yacuenta">Si ya tienes cuenta, Iniciar sesión</string>
    <string name="recuperarcontrasena">¿Olvidaste tu contraseña?</string>
    <string name="btnregistrar">Registrar?</string>
    <string name="welcome_user_title">Bienvenido, %s</string>
    <string name="cannot_get_email">No pudimos obtener el email :(</string>
    <string name="user_error">Favor ingresa nombre de usuario :)</string>
    <string name="password_error">Favor ingresa tu contraseña</string>
    <string name="email_error">Favor ingresa tu email :)</string>
    <string name="titulonota">Titulo de Nota</string>
    <string name="descripnota">Descripcion</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>