<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundLoginRegister"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/logo_desc"
        android:src="@drawable/logotipop"
        android:layout_marginTop="130dp"
        android:layout_weight="9" />


    <EditText
        android:id="@+id/et_correo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp"
        android:layout_weight="2"
        android:background="@drawable/textradius"
        android:ems="10"
        android:hint="@string/correo"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textColorHint="@color/black" />



    <EditText
        android:id="@+id/et_contraseña"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_weight="2"
        android:background="@drawable/textradius"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textColorHint="@color/black" />


    <Button
        android:id="@+id/btnIniciarsesion"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="25dp"
        android:layout_weight="2"
        android:background="@drawable/boton_redondo"
        android:hint="@string/btnIniciarsesion"
         />

    <Button
        android:id="@+id/btn_pregistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/mg_hor_wide_view"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:text="@string/Registrar"
        android:textColor="@color/white"
        android:textSize="10dp"
        android:onClick="onClick"
        />

</LinearLayout>